libqt6c/src/libqtextformat.hpp

typedef struct QBrush QBrush;
typedef struct QColor QColor;
typedef struct QPen QPen;
typedef struct QTextBlockFormat QTextBlockFormat;
typedef struct QTextCharFormat QTextCharFormat;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextImageFormat QTextImageFormat;
typedef struct QTextLength QTextLength;
typedef struct QTextListFormat QTextListFormat;
typedef struct QTextTableCellFormat QTextTableCellFormat;
typedef struct QTextTableFormat QTextTableFormat;
typedef struct QVariant QVariant;
QTextLength* QTextLength_new(const QTextLength* other);
QTextLength* QTextLength_new2(QTextLength* other);
QTextLength* QTextLength_new3();
QTextLength* QTextLength_new4(int type, double value);
QTextLength* QTextLength_new5(const QTextLength* param1);
int QTextLength_Type(const QTextLength* self);
double QTextLength_Value(const QTextLength* self, double maximumLength);
double QTextLength_RawValue(const QTextLength* self);
bool QTextLength_OperatorEqual(const QTextLength* self, const QTextLength* other);
bool QTextLength_OperatorNotEqual(const QTextLength* self, const QTextLength* other);
void QTextLength_Delete(QTextLength* self);
QTextFormat* QTextFormat_new();
QTextFormat* QTextFormat_new2(int type);
QTextFormat* QTextFormat_new3(const QTextFormat* rhs);
void QTextFormat_OperatorAssign(QTextFormat* self, const QTextFormat* rhs);
void QTextFormat_Swap(QTextFormat* self, QTextFormat* other);
void QTextFormat_Merge(QTextFormat* self, const QTextFormat* other);
bool QTextFormat_IsValid(const QTextFormat* self);
bool QTextFormat_IsEmpty(const QTextFormat* self);
int QTextFormat_Type(const QTextFormat* self);
int QTextFormat_ObjectIndex(const QTextFormat* self);
void QTextFormat_SetObjectIndex(QTextFormat* self, int object);
QVariant* QTextFormat_Property(const QTextFormat* self, int propertyId);
void QTextFormat_SetProperty(QTextFormat* self, int propertyId, const QVariant* value);
void QTextFormat_ClearProperty(QTextFormat* self, int propertyId);
bool QTextFormat_HasProperty(const QTextFormat* self, int propertyId);
bool QTextFormat_BoolProperty(const QTextFormat* self, int propertyId);
int QTextFormat_IntProperty(const QTextFormat* self, int propertyId);
double QTextFormat_DoubleProperty(const QTextFormat* self, int propertyId);
libqt_string QTextFormat_StringProperty(const QTextFormat* self, int propertyId);
QColor* QTextFormat_ColorProperty(const QTextFormat* self, int propertyId);
QPen* QTextFormat_PenProperty(const QTextFormat* self, int propertyId);
QBrush* QTextFormat_BrushProperty(const QTextFormat* self, int propertyId);
QTextLength* QTextFormat_LengthProperty(const QTextFormat* self, int propertyId);
libqt_list /* of QTextLength* */ QTextFormat_LengthVectorProperty(const QTextFormat* self, int propertyId);
void QTextFormat_SetProperty2(QTextFormat* self, int propertyId, const libqt_list /* of QTextLength* */ lengths);
libqt_map /* of int to QVariant* */ QTextFormat_Properties(const QTextFormat* self);
int QTextFormat_PropertyCount(const QTextFormat* self);
void QTextFormat_SetObjectType(QTextFormat* self, int type);
int QTextFormat_ObjectType(const QTextFormat* self);
bool QTextFormat_IsCharFormat(const QTextFormat* self);
bool QTextFormat_IsBlockFormat(const QTextFormat* self);
bool QTextFormat_IsListFormat(const QTextFormat* self);
bool QTextFormat_IsFrameFormat(const QTextFormat* self);
bool QTextFormat_IsImageFormat(const QTextFormat* self);
bool QTextFormat_IsTableFormat(const QTextFormat* self);
bool QTextFormat_IsTableCellFormat(const QTextFormat* self);
QTextBlockFormat* QTextFormat_ToBlockFormat(const QTextFormat* self);
QTextCharFormat* QTextFormat_ToCharFormat(const QTextFormat* self);
QTextListFormat* QTextFormat_ToListFormat(const QTextFormat* self);
QTextTableFormat* QTextFormat_ToTableFormat(const QTextFormat* self);
QTextFrameFormat* QTextFormat_ToFrameFormat(const QTextFormat* self);
QTextImageFormat* QTextFormat_ToImageFormat(const QTextFormat* self);
QTextTableCellFormat* QTextFormat_ToTableCellFormat(const QTextFormat* self);
bool QTextFormat_OperatorEqual(const QTextFormat* self, const QTextFormat* rhs);
bool QTextFormat_OperatorNotEqual(const QTextFormat* self, const QTextFormat* rhs);
void QTextFormat_SetLayoutDirection(QTextFormat* self, int direction);
int QTextFormat_LayoutDirection(const QTextFormat* self);
void QTextFormat_SetBackground(QTextFormat* self, const QBrush* brush);
QBrush* QTextFormat_Background(const QTextFormat* self);
void QTextFormat_ClearBackground(QTextFormat* self);
void QTextFormat_SetForeground(QTextFormat* self, const QBrush* brush);
QBrush* QTextFormat_Foreground(const QTextFormat* self);
void QTextFormat_ClearForeground(QTextFormat* self);
void QTextFormat_Delete(QTextFormat* self);