QtBeef/src/Qt/qtextformat.bf

using System;
using System.Interop;

namespace Qt6;

// --------------------------------------------------------------
// QTextLength
// --------------------------------------------------------------
[CRepr]
struct QTextLength_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QTextLength_new")]
	public static extern QTextLength_Ptr QTextLength_new(void** other);
	[LinkName("QTextLength_new2")]
	public static extern QTextLength_Ptr QTextLength_new2(void** other);
	[LinkName("QTextLength_new3")]
	public static extern QTextLength_Ptr QTextLength_new3();
	[LinkName("QTextLength_new4")]
	public static extern QTextLength_Ptr QTextLength_new4(QTextLength_Type type, double value);
	[LinkName("QTextLength_new5")]
	public static extern QTextLength_Ptr QTextLength_new5(void** param1);
	[LinkName("QTextLength_Delete")]
	public static extern void QTextLength_Delete(QTextLength_Ptr self);
	[LinkName("QTextLength_Type")]
	public static extern QTextLength_Type QTextLength_Type(void* self);
	[LinkName("QTextLength_Value")]
	public static extern double QTextLength_Value(void* self, double maximumLength);
	[LinkName("QTextLength_RawValue")]
	public static extern double QTextLength_RawValue(void* self);
	[LinkName("QTextLength_OperatorEqual")]
	public static extern bool QTextLength_OperatorEqual(void* self, void** other);
	[LinkName("QTextLength_OperatorNotEqual")]
	public static extern bool QTextLength_OperatorNotEqual(void* self, void** other);
	[LinkName("QTextLength_ToQvariant")]
	public static extern void* QTextLength_ToQvariant(void* self);
}
class QTextLength : IQTextLength
{
	private QTextLength_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QTextLength_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(IQTextLength other)
	{
		this.ptr = CQt.QTextLength_new((.)other?.ObjectPtr);
	}
	public this()
	{
		this.ptr = CQt.QTextLength_new3();
	}
	public this(QTextLength_Type type, double value)
	{
		this.ptr = CQt.QTextLength_new4(type, value);
	}
	public ~this()
	{
		CQt.QTextLength_Delete(this.ptr);
	}
	public QTextLength_Type Type()
	{
		return CQt.QTextLength_Type((.)this.ptr.Ptr);
	}
	public double Value(double maximumLength)
	{
		return CQt.QTextLength_Value((.)this.ptr.Ptr, maximumLength);
	}
	public double RawValue()
	{
		return CQt.QTextLength_RawValue((.)this.ptr.Ptr);
	}
}
interface IQTextLength : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QTextFormat
// --------------------------------------------------------------
[CRepr]
struct QTextFormat_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QTextFormat_new")]
	public static extern QTextFormat_Ptr QTextFormat_new();
	[LinkName("QTextFormat_new2")]
	public static extern QTextFormat_Ptr QTextFormat_new2(c_int type);
	[LinkName("QTextFormat_new3")]
	public static extern QTextFormat_Ptr QTextFormat_new3(void** rhs);
	[LinkName("QTextFormat_Delete")]
	public static extern void QTextFormat_Delete(QTextFormat_Ptr self);
	[LinkName("QTextFormat_OperatorAssign")]
	public static extern void QTextFormat_OperatorAssign(void* self, void** rhs);
	[LinkName("QTextFormat_Swap")]
	public static extern void QTextFormat_Swap(void* self, void** other);
	[LinkName("QTextFormat_Merge")]
	public static extern void QTextFormat_Merge(void* self, void** other);
	[LinkName("QTextFormat_IsValid")]
	public static extern bool QTextFormat_IsValid(void* self);
	[LinkName("QTextFormat_IsEmpty")]
	public static extern bool QTextFormat_IsEmpty(void* self);
	[LinkName("QTextFormat_Type")]
	public static extern c_int QTextFormat_Type(void* self);
	[LinkName("QTextFormat_ObjectIndex")]
	public static extern c_int QTextFormat_ObjectIndex(void* self);
	[LinkName("QTextFormat_SetObjectIndex")]
	public static extern void QTextFormat_SetObjectIndex(void* self, c_int object);
	[LinkName("QTextFormat_Property")]
	public static extern void* QTextFormat_Property(void* self, c_int propertyId);
	[LinkName("QTextFormat_SetProperty")]
	public static extern void QTextFormat_SetProperty(void* self, c_int propertyId, void** value);
	[LinkName("QTextFormat_ClearProperty")]
	public static extern void QTextFormat_ClearProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_HasProperty")]
	public static extern bool QTextFormat_HasProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_BoolProperty")]
	public static extern bool QTextFormat_BoolProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_IntProperty")]
	public static extern c_int QTextFormat_IntProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_DoubleProperty")]
	public static extern double QTextFormat_DoubleProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_StringProperty")]
	public static extern libqt_string QTextFormat_StringProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_ColorProperty")]
	public static extern void* QTextFormat_ColorProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_PenProperty")]
	public static extern void* QTextFormat_PenProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_BrushProperty")]
	public static extern void* QTextFormat_BrushProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_LengthProperty")]
	public static extern void* QTextFormat_LengthProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_LengthVectorProperty")]
	public static extern void* QTextFormat_LengthVectorProperty(void* self, c_int propertyId);
	[LinkName("QTextFormat_SetProperty2")]
	public static extern void QTextFormat_SetProperty2(void* self, c_int propertyId, void** lengths);
	[LinkName("QTextFormat_Properties")]
	public static extern void* QTextFormat_Properties(void* self);
	[LinkName("QTextFormat_PropertyCount")]
	public static extern c_int QTextFormat_PropertyCount(void* self);
	[LinkName("QTextFormat_SetObjectType")]
	public static extern void QTextFormat_SetObjectType(void* self, c_int type);
	[LinkName("QTextFormat_ObjectType")]
	public static extern c_int QTextFormat_ObjectType(void* self);
	[LinkName("QTextFormat_IsCharFormat")]
	public static extern bool QTextFormat_IsCharFormat(void* self);
	[LinkName("QTextFormat_IsBlockFormat")]
	public static extern bool QTextFormat_IsBlockFormat(void* self);
	[LinkName("QTextFormat_IsListFormat")]
	public static extern bool QTextFormat_IsListFormat(void* self);
	[LinkName("QTextFormat_IsFrameFormat")]
	public static extern bool QTextFormat_IsFrameFormat(void* self);
	[LinkName("QTextFormat_IsImageFormat")]
	public static extern bool QTextFormat_IsImageFormat(void* self);
	[LinkName("QTextFormat_IsTableFormat")]
	public static extern bool QTextFormat_IsTableFormat(void* self);
	[LinkName("QTextFormat_IsTableCellFormat")]
	public static extern bool QTextFormat_IsTableCellFormat(void* self);
	[LinkName("QTextFormat_ToBlockFormat")]
	public static extern void* QTextFormat_ToBlockFormat(void* self);
	[LinkName("QTextFormat_ToCharFormat")]
	public static extern void* QTextFormat_ToCharFormat(void* self);
	[LinkName("QTextFormat_ToListFormat")]
	public static extern void* QTextFormat_ToListFormat(void* self);
	[LinkName("QTextFormat_ToTableFormat")]
	public static extern void* QTextFormat_ToTableFormat(void* self);
	[LinkName("QTextFormat_ToFrameFormat")]
	public static extern void* QTextFormat_ToFrameFormat(void* self);
	[LinkName("QTextFormat_ToImageFormat")]
	public static extern void* QTextFormat_ToImageFormat(void* self);
	[LinkName("QTextFormat_ToTableCellFormat")]
	public static extern void* QTextFormat_ToTableCellFormat(void* self);
	[LinkName("QTextFormat_OperatorEqual")]
	public static extern bool QTextFormat_OperatorEqual(void* self, void** rhs);
	[LinkName("QTextFormat_OperatorNotEqual")]
	public static extern bool QTextFormat_OperatorNotEqual(void* self, void** rhs);
	[LinkName("QTextFormat_ToQvariant")]
	public static extern void* QTextFormat_ToQvariant(void* self);
	[LinkName("QTextFormat_SetLayoutDirection")]
	public static extern void QTextFormat_SetLayoutDirection(void* self, Qt_LayoutDirection direction);
	[LinkName("QTextFormat_LayoutDirection")]
	public static extern Qt_LayoutDirection QTextFormat_LayoutDirection(void* self);
	[LinkName("QTextFormat_SetBackground")]
	public static extern void QTextFormat_SetBackground(void* self, void** brush);
	[LinkName("QTextFormat_Background")]
	public static extern void* QTextFormat_Background(void* self);
	[LinkName("QTextFormat_ClearBackground")]
	public static extern void QTextFormat_ClearBackground(void* self);
	[LinkName("QTextFormat_SetForeground")]
	public static extern void QTextFormat_SetForeground(void* self, void** brush);
	[LinkName("QTextFormat_Foreground")]
	public static extern void* QTextFormat_Foreground(void* self);
	[LinkName("QTextFormat_ClearForeground")]
	public static extern void QTextFormat_ClearForeground(void* self);
}
